--- a/popup.html
+++ b/popup.html
@@ -21,35 +21,39 @@
 
     <main class="app-content">
       <div class="input-section">
-        <label for="userInput">Your Text</label>
-        <textarea id="userInput" placeholder="Paste or type your content here..." rows="5"></textarea>
+        <div class="section-header">
+          <label for="userInput">Your Text</label>
+        </div>
+        <textarea id="userInput" placeholder="Paste or type your content here..."></textarea>
       </div>
 
-      <div class="controls-section">
-        <div class="select-wrapper">
-          <label for="refinementType">Refinement Style</label>
-          <select id="refinementType">
-            <option value="coding">Technical Code</option>
-            <option value="productIdea">Product Idea</option>
-            <option value="debugging">Debugging</option>
-            <option value="businessStrategy">Business Strategy</option>
-          </select>          
+      <div class="middle-section">
+        <div class="controls-section">
+          <div class="select-wrapper">
+            <label for="refinementType">Refinement Style</label>
+            <select id="refinementType">
+              <option value="coding">Technical Code</option>
+              <option value="productIdea">Product Idea</option>
+              <option value="debugging">Debugging</option>
+              <option value="businessStrategy">Business Strategy</option>
+            </select>
+          </div>
+
+          <div class="button-group">
+            <button id="addPromptBtn" class="icon-btn" title="Add custom refinement type">
+              <svg viewBox="0 0 24 24">
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+              </svg>
+            </button>
+
+            <button id="refineBtn" class="primary-btn">
+              <svg class="btn-icon" viewBox="0 0 24 24">
+                <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
+              </svg>
+              Refine Text
+            </button>
+          </div>
         </div>
-
-        <button id="addPromptBtn" class="icon-btn" title="Add custom refinement type">
-          <svg viewBox="0 0 24 24">
-            <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
-          </svg>
-        </button>
-
-        <button id="refineBtn" class="primary-btn">
-          <span class="btn-content">
-            <svg class="btn-icon" viewBox="0 0 24 24">
-              <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
-            </svg>
-            Refine Text
-          </span>
-        </button>
       </div>
 
       <div class="output-section">
@@ -61,7 +65,7 @@
             </svg>
           </button>
         </div>
-        <textarea id="refinedOutput" readonly rows="5"></textarea>
+        <textarea id="refinedOutput" readonly></textarea>
       </div>
     </main>
 
@@ -70,10 +74,10 @@
         <input type="password" id="apiKey" placeholder="Enter Gemini API key">
         <button id="saveApiKey" class="secondary-btn">Save Key</button>
       </div>
+      <div class="footer-credit">
+        Made by <a href="https://www.linkedin.com/in/muhammad-shabbar-b440932bb/" target="_blank">Muhammad Shabbar</a>
+      </div>
     </footer>
-  </div>
-  <div class="footer-credit">
-    Made by <a href="https://www.linkedin.com/in/muhammad-shabbar-b440932bb/" target="_blank" rel="noopener noreferrer">Muhammad Shabbar</a>
   </div>
 
   <!-- Add Prompt Modal -->
@@ -86,7 +90,7 @@
       </div>
       <div class="input-group">
         <label for="promptDescription">Description Template</label>
-        <textarea id="promptDescription" rows="5" placeholder="Describe how this refinement should work..."></textarea>
+        <textarea id="promptDescription" rows="3" placeholder="Describe how this refinement should work..."></textarea>
       </div>
       <div class="modal-actions">
         <button id="cancelAddPrompt" class="secondary-btn">Cancel</button>
