--- a/popup.html
+++ b/popup.html
@@ -23,6 +23,13 @@
       <div class="input-section">
         <div class="section-header">
           <label for="userInput">Your Text</label>
+          <div class="header-actions">
+            <button id="voiceInputBtn" class="icon-btn" title="Voice typing">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 2a3 3 0 0 1 3 3v6a3 3 0 0 1-6 0V5a3 3 0 0 1 3-3zm7 9a1 1 0 0 1 1 1 7 7 0 0 1-14 0 1 1 0 0 1 1-1 1 1 0 0 1 1 1 5 5 0 0 0 10 0 1 1 0 0 1 1-1z"/>
+              </svg>
+            </button>
+          </div>
         </div>
         <textarea id="userInput" placeholder="Paste or type your content here..."></textarea>
       </div>
@@ -79,7 +86,7 @@
       </div>
     </footer>
   </div>
-
+  
   <!-- Add Prompt Modal -->
   <div id="addPromptModal" class="modal">
     <div class="modal-content">
